<resources>
    <string name="app_name">Team Weather</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="get_weather">Get weather for %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="create_one_here">Create one here!</string>
    <string name="create_your_account">Create your account</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="button_create_account">Create account</string>
    <string name="googleMapsApiKey">AIzaSyDz2HkpxvxPdlMJW_Ux0RfIxJfGscExSq0</string>
    <string name="prompt_userName">Username</string>
    <string name="save_location_button">Save Location</string>
    <string name="new_location_hint">New location</string>
    <string name="delete_location_button">delete location</string>
    <string name="log_out_button">Log out</string>
    <string name="location">location</string>
    <string name="day">Day:</string>
    <string name="select_date">Select Date</string>
    <string name="search">search</string>
    <string name="time">Time</string>
    <string name="weather">Weather</string>
    <string name="temp">Temp.</string>
    <string name="wind">Wind</string>
    <string name="_00_00">00:00</string>
    <string name="empty">-</string>
    <string name="_03_00">03:00</string>
    <string name="_06_00">06:00</string>
    <string name="_09_00">09:00</string>
    <string name="_12_00">12:00</string>
    <string name="_15_00">15:00</string>
    <string name="_18_00">18:00</string>
    <string name="_21_00">21:00</string>
    <string name="weather_icon">Weather icon</string>
    <string name="date_request">Please enter a date</string>
    <string name="temperature_text">%d°C</string>
    <string name="wind_speed">%1$s Knots</string>
    <string name="date_out_of_bound">There is no weather for the chosen date...</string>
    <string name="icon">icon</string>
</resources>