<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/create_your_account"/>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:drawableStart="@drawable/baseline_verified_user_24"
        android:drawablePadding="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:drawableStart="@drawable/baseline_verified_user_24"
        android:drawablePadding="5dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_create_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:minHeight="48dp" />


</LinearLayout>